--- a/bai1/bai1.css
+++ b/bai1/bai1.css
@@ -27,5 +27,11 @@ table {
     width: 100%;
     text-align: center;
     margin-bottom: 60px;
-    border: 1px solid black;
+    border: 1px solid rgb(139, 135, 135);
+}
+thead{
+    border: 1px solid rgb(139, 135, 135);
+}
+tr td{
+    border: none;
 }
